--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -41,6 +41,12 @@ body {
     font-size:20px;
     text-decoration:none;
     display:inline-block;
+    color: white;
+    -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
 }
 .myNav {
     z-index:2;
@@ -73,9 +79,6 @@ body {
 
 }
 
-.myNav a{
-    color: white;
-}
 
 .myNav li selected{
     text-align:center;
@@ -86,24 +89,73 @@ body {
     font-size:18px;
 }
 
-.myNav ul
-{
-    display:none;
+.myNav li li ul {
     position:absolute;
-    top:100%;
+    top:50px;
+    left:130px; /* make this equal to the width of the sub nav above */
+    margin:0;
+}
+
+.sub-menu a {
+    width: 133px;
+    margin:0;
+}
+
+.sub-menu li{
+    padding-right: 0px;
+    padding-left:0px;
+    border:none;
+}
+
+.sub-menu
+{
+    visibility: hidden;
+    position:absolute;
+    top:28px;
     left:-1px;
     padding-left: 0px;
     padding-right: 10px;
     text-align:left;
     border: 2px solid darkblue;
     background-color: DarkBlue;
-    width: auto;
+    width: 135px;
     z-index: 3;
+    opacity: 0;
+    -webkit-transition: all .25s ease;
+       -moz-transition: all .25s ease;
+        -ms-transition: all .25s ease;
+         -o-transition: all .25s ease;
+            transition: all .25s ease;
 }
 
-.myNav li:hover > ul
+.drop:hover > .sub-menu
 {
-    display:block;
+    top:31px;
+    opacity: 1;
+    visibility: visible;
+}
+
+li .drop:hover > .sub-menu
+{
+    top:-3px;
+    opacity: 1;
+    visibility: visible;
+}
+
+.btnAnim{
+    cursor: pointer;
+    opacity: 0.5;
+    transition: 0.1s ease;
+    -webkit-transition: 0.1s ease;
+    -moz-transition: 0.1s ease;
+}
+
+.btnAnim:hover{
+    -webkit-transform: scale(1.05,1.05);
+    -moz-transform:scale(1.05,1.05);
+    opacity: 1;
+    -webkit-opacity: 1;
+    -moz-opacity: 1;
 }
 
 @media all and (max-width: 850px) {
