--- a/public/css/grayscale.css
+++ b/public/css/grayscale.css
@@ -52,21 +52,19 @@ body {
 }
 .myNav {
     z-index:2;
-    border: 2px solid DarkBlue;
-    background-color: DarkBlue;
+    background-color: #383938;
     list-style:none;
     padding:0;
     margin:0;
     text-align:center;
+    box-shadow: inset 0 0 17px -4px #000000;
 }
 
-.myNav li a:link {color:white;}    /* unvisited link */
-.myNav li a:visited {color:white;}  /* visited link */
-.myNav li a:hover {color:red;}  /* mouse over link */
+.myNav li a:hover {color:#00D1D1;}  /* mouse over link */
 .myNav li a:active {color:white;}  /* selected link */
 .myNav li{
-    border: 2px solid DarkBlue;
-    background-color: DarkBlue;
+    border: 2px solid transparent;
+    background-color: transparent;
     text-align:center;
     padding-left: 10px;
     padding-right: 10px;
@@ -113,13 +111,13 @@ body {
 {
     visibility: hidden;
     position:absolute;
-    top:28px;
+    top:25px;
     left:-1px;
     padding-left: 0px;
     padding-right: 10px;
     text-align:left;
-    border: 2px solid darkblue;
-    background-color: DarkBlue;
+    border: 2px solid #383938;
+    background-color: #383938;
     width: 135px;
     z-index: 3;
     opacity: 0;
@@ -128,11 +126,12 @@ body {
         -ms-transition: all .25s ease;
          -o-transition: all .25s ease;
             transition: all .25s ease;
+    box-shadow: -7px 7px 15px 0px rgba(0,0,0,0.58);
 }
 
 .drop:hover > .sub-menu
 {
-    top:31px;
+    top:29px;
     opacity: 1;
     visibility: visible;
 }
@@ -208,8 +207,6 @@ li .drop:hover > .sub-menu
     text-align: left;
 }
 
-.selected a:link {color:pink;}    /* unvisited link */
-.selected a:visited {color:teal;}  /* visited link */
 .selected a:hover {color:black;}  /* mouse over link */
 .selected a:active {color:white;}  /* selected link */
 .selected {
@@ -220,9 +217,10 @@ li .drop:hover > .sub-menu
     color: black;
     z-index:1;
     text-align: left;
-    background-color: beige;
+    background-color: grey;
     min-height: 500px;
     overflow: hidden;
+    box-shadow: inset 0 0 20px #000000;
 }
 
 
@@ -291,6 +289,21 @@ li .drop:hover > .sub-menu
     z-index: 10;
     margin-left: 40px;
     color: white;
+}
+
+#logon a{
+    color: #00D1D1;
+}
+
+.btn-primary{
+    background-color: #00D1D1;
+    border-color: #00D1D1;
+    
+}
+
+.btn-primary:hover{
+    background-color: #009191;
+    border-color: #009191;
 }
 
 #theme {
