--- a/public/css/midnight.css
+++ b/public/css/midnight.css
@@ -288,6 +288,7 @@ li .drop:hover > .sub-menu
     width: 100%;
 }
 
+
 #logon {
     float: left;
     z-index: 10;
@@ -302,7 +303,7 @@ li .drop:hover > .sub-menu
 .btn-primary{
     background-color: #49DB69;
     border-color: #49DB69;
-    
+
 }
 
 .btn-primary:hover{
@@ -314,7 +315,7 @@ li .drop:hover > .sub-menu
     float: right;
     z-index: 10;
     margin-right: 40px;
-    color: white;
+    color: #49DB69;
 }
 
 .submitForm{
